[tool.poetry]
name = "ergo-test"
version = "0.2.0"
description = ""
authors = ["Zach Schubert <zschubert@nautiluslabs.co>"]
packages = [
	{ include = "ergo_test" }
]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.27.1"
pytest = "^7.1.1"
docker = "^5.0.3"
ergo = ">=0.8.6-alpha.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nautilus"
url = "https://pypi.nautiluslabs.co/simple/"
